# azure-ai102-practice

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
src/: settings.py
src/common/: credentials.py
src/docintel/: read.py
src/language/: analyze_text.py  clu.py  qna.py
src/language/custom-ner/: test1.txt  test2.txt
src/language/custom-ner/ads/: Ad 1.txt  Ad 10.txt  Ad 11.txt  Ad 12.txt  Ad 2.txt  Ad 4.txt  Ad 5.txt  Ad 6.txt  Ad 7.txt  Ad 8.txt  Ad 9.txt
src/language/text-classification/: test1.txt  test2.txt
src/language/text-classification/articles/: Article 1.txt  Article 10.txt  Article 11.txt  Article 12.txt  Article 2.txt  Article 3.txt  Article 5.txt  Article 6.txt  Article 7.txt  Article 8.txt  Article 9.txt
src/openai/: access.py
src/vision/: analyze-video.html  analyze_face.py  analyze_image.py  background_removal.py  detect_face.py  get-videos.sh  image_classification.py  read_text.py
src/vision/classification-images/: replace.sh
src/vision/classification-images/training-images/: training_labels.json
