[tool.poetry]
name = "cognitive-services-python-sdk-samples"
version = "0.1.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvd.studio>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
azure-cognitiveservices-knowledge-qnamaker = "0.3.0"
azure-cognitiveservices-language-luis = "^0.7.0"
azure-cognitiveservices-language-spellcheck = "^2.0.0"
azure-ai-textanalytics = "5.0.0"
azure-cognitiveservices-search-autosuggest = "0.1.0"
azure-cognitiveservices-search-customsearch = "^0.3.0"
azure-cognitiveservices-search-entitysearch = "^2.0.0"
azure-cognitiveservices-search-imagesearch = "^2.0.0"
azure-cognitiveservices-search-newssearch = "2.0.0"
azure-cognitiveservices-search-videosearch = "^2.0.0"
azure-cognitiveservices-search-visualsearch = "0.2.0"
azure-cognitiveservices-search-websearch = "^2.0.0"
azure-cognitiveservices-vision-computervision = "0.3.0"
azure-cognitiveservices-vision-contentmoderator = "1.0.0"
azure-cognitiveservices-vision-customvision = "0.4.0"
azure-cognitiveservices-vision-face = "^0.6.0"
azure-ai-anomalydetector = "3.0.0b2"
azure-cognitiveservices-inkrecognizer = "1.0.0b1"
pandas = "^2.2.2"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
